# pytest_mock_examples

./: README.md  pyproject.toml
src/hogelib/: api.py  api_async.py  http_client.py  main.py
tests/: test_api.py  test_api_async.py  test_mock_basics.py  test_monkeypatch.py  test_pytest-mock.py  test_unittest.py
